--- a/src/Language.properties
+++ b/src/Language.properties
@@ -1,11 +1,19 @@
+# Language.properties is Thai dictionary for menu
+# EN or English
 
+connecting = connecting to database
+load = loading...
 login = login
 Cancel = Cancel
 Username = Username :
 Password = Password :
 Question_Detail = Question Detail
+Vote_Projects = Vote project
 Project_Description = Project Description
 Choose_Project_Team = Choose Team's Project
 summit = summit
 exit = exit
-Question: = Question:
+Question = Question :
+Before_summit = Select project before summit!
+You_voted = You voted
+vote_same = You have vote the same team and question
