Update language properties files

--- a/src/Language.properties
+++ b/src/Language.properties
@@ -1,6 +1,10 @@
 # Language.properties is Thai dictionary for menu
 # EN or English
 
+textTitle = Confirm Exit
+textMessage = Exit the application?
+textYes = Yes
+textNo = No
 connecting = connecting to database
 load = loading...
 login = login
