Update Language properties files

--- a/src/Language.properties
+++ b/src/Language.properties
@@ -1,6 +1,8 @@
 # Language.properties is Thai dictionary for menu
 # EN or English
 
+success = Login success
+fail = Invalid Username or Password
 textTitle = Confirm Exit
 textMessage = Exit the application?
 textYes = Yes
