--- a/src/Language.properties
+++ b/src/Language.properties
@@ -20,6 +20,15 @@ Choose_Project_Team = Choose Team's Project
 summit = summit
 exit = exit
 Question = Question :
+Project = Project :
+ProjectName = Project Name
+TeamName = Team Name
+Set_Timing = Set Timing
+Save = Save
+UploadPic = Upload Picture
+Voting_Configuration = Voting Configuration
+Choose_Image = Choose Image
 Before_summit = Select project before summit!
 You_voted = You voted
 vote_same = You have vote the same team and question
+
