Update language properties files

--- a/src/Language.properties
+++ b/src/Language.properties
@@ -31,4 +31,4 @@ Choose_Image = Choose Image
 Before_summit = Select project before summit!
 You_voted = You voted
 vote_same = You have vote the same team and question
-
+Vote_Result = Vote Result
