--- a/src/Language.properties
+++ b/src/Language.properties
@@ -32,3 +32,6 @@ Before_summit = Select project before summit!
 You_voted = You voted
 vote_same = You have vote the same team and question
 Vote_Result = Vote Result
+Menu = Menu
+Vote = Vote
+See_Result = See Result
