Update for Multi-Language

--- a/src/Language.properties
+++ b/src/Language.properties
@@ -37,3 +37,5 @@ Vote = Vote
 See_Result = See Result
 Main_menu_voter = What would you like to do next?
 Back = << Back
+Add_Button = Add
+Remove_Button = Remove
